<resources>
    <string name="app_name">Assignment_XPOTATO</string>
    <string name="guest_details">Guest Details</string>
    <string name="ic_number">IC Number:</string>
    <string name="e_mail">E-mail:</string>
    <string name="name">Name:</string>
    <string name="phone_number">Phone Number:</string>
    <string name="booking_check_in"><![CDATA[Booking & Check-In]]></string>
    <string name="number_of_guest">Number of Guest:</string>
    <string name="room_number">Room Number:</string>
    <string name="_0">0</string>
    <string name="confirm">Confirm</string>
    <string name="missing_item_list"><u>Missing Item List</u> </string>
    <string name="broken_item_list"><u>Broken Item List</u> </string>
    <string name="rm">RM</string>


</resources>